<?xml version="1.0"?>
<package format="2">
  <name>ur5_joystick_control</name>
  <version>0.0.0</version>
  <description>The ur5_joystick_control package</description>

  <maintainer email="jjcc0704@gmail.com">Juo-Tung Chen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
